--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
         <module>creatures-hunting-persistence</module>
         <module>creatures-hunting-service</module>
         <module>creatures-hunting-api</module>
-        <module>creatures-hunting-rest</module>
+        <module>creatures-hunting-rest-with-gui</module>
         <module>creatures-hunting-sample-data</module>
     </modules>
 </project>
